src/main/cshadow.rs

pub type Tracker = _Tracker;
pub use self::_LogInfoFlags as LogInfoFlags;
pub const _LogInfoFlags_LOG_INFO_FLAGS_NONE: _LogInfoFlags = 0;
pub const _LogInfoFlags_LOG_INFO_FLAGS_NODE: _LogInfoFlags = 1;
pub const _LogInfoFlags_LOG_INFO_FLAGS_SOCKET: _LogInfoFlags = 2;
pub const _LogInfoFlags_LOG_INFO_FLAGS_RAM: _LogInfoFlags = 4;
pub type _LogInfoFlags = i32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _Address {
    _unused: [u8; 0],
}
#[doc = " An Address structure holds information used to identify nodes, allowing for"]
#[doc = " easy extraction of both integer and string forms of an IP address as well as"]
#[doc = " the string hostname associated with the IP. Address is an opaque structure and"]
#[doc = " should only be accessed using the functions in this class."]
pub type Address = _Address;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _DNS {
    _unused: [u8; 0],
}
pub type DNS = _DNS;
extern "C" {
    pub fn dns_new() -> *mut DNS;
}
extern "C" {
    pub fn dns_free(dns: *mut DNS);
}
extern "C" {
    pub fn dns_register(
        dns: *mut DNS,
        id: GQuark,
        name: *const gchar,
        requestedIP: in_addr_t,
    ) -> *mut Address;
}
extern "C" {
    pub fn dns_deregister(dns: *mut DNS, address: *mut Address);
}
extern "C" {
    pub fn dns_resolveIPToAddress(dns: *mut DNS, ip: in_addr_t) -> *mut Address;
}
extern "C" {
    pub fn dns_resolveNameToAddress(dns: *mut DNS, name: *const gchar) -> *mut Address;
}
extern "C" {
    pub fn dns_getHostsFilePath(dns: *mut DNS) -> *mut gchar;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _Packet {
    _unused: [u8; 0],
}
pub type Packet = _Packet;
pub type PacketTCPHeader = _PacketTCPHeader;
extern "C" {
    pub fn process_new(
        host: *mut Host,
        processID: guint,
        startTime: CSimulationTime,
        stopTime: CSimulationTime,
        hostName: *const gchar,
        pluginName: *const gchar,
        pluginPath: *const gchar,
        envv: *mut *mut gchar,
        argv: *const *const gchar,
        pause_for_debugging: bool,
    ) -> *mut Process;
}
extern "C" {
    pub fn process_ref(proc_: *mut Process);
}
extern "C" {
    pub fn process_unref(proc_: *mut Process);
}
extern "C" {
    pub fn process_schedule(proc_: *mut Process);
}
extern "C" {
    pub fn process_continue(proc_: *mut Process, thread: *mut Thread);
}
extern "C" {
    pub fn process_stop(proc_: *mut Process);
}
extern "C" {
    pub fn process_detachPlugin(procptr: gpointer, nothing: gpointer);
}
extern "C" {
    pub fn process_getWorkingDir(proc_: *mut Process) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn process_addThread(proc_: *mut Process, thread: *mut Thread);
}
extern "C" {
    pub fn process_getThread(proc_: *mut Process, virtualTID: pid_t) -> *mut Thread;
}
extern "C" {
    pub fn process_markAsExiting(proc_: *mut Process);
}
extern "C" {
    pub fn process_hasStarted(proc_: *mut Process) -> gboolean;
}
extern "C" {
    pub fn process_isRunning(proc_: *mut Process) -> gboolean;
}
extern "C" {
    pub fn process_getName(proc_: *mut Process) -> *const gchar;
}
extern "C" {
    pub fn process_straceLoggingMode(proc_: *mut Process) -> StraceFmtMode;
}
extern "C" {
    pub fn process_getStraceFd(proc_: *mut Process) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn process_getPluginName(proc_: *mut Process) -> *const gchar;
}
extern "C" {
    pub fn process_getProcessID(proc_: *mut Process) -> guint;
}
extern "C" {
    pub fn process_getNativePid(proc_: *const Process) -> pid_t;
}
extern "C" {
    pub fn process_findNativeTID(
        proc_: *mut Process,
        virtualPID: pid_t,
        virtualTID: pid_t,
    ) -> pid_t;
}
extern "C" {
    pub fn process_getDescriptorTable(proc_: *mut Process) -> *mut DescriptorTable;
}
extern "C" {
    pub fn process_getPhysicalAddress(
        proc_: *mut Process,
        vPtr: PluginVirtualPtr,
    ) -> PluginPhysicalPtr;
}
extern "C" {
    pub fn process_readPtr(
        proc_: *mut Process,
        dst: *mut ::std::os::raw::c_void,
        src: PluginVirtualPtr,
        n: size_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn process_getReadableString(
        process: *mut Process,
        plugin_src: PluginPtr,
        n: size_t,
        str_: *mut *const ::std::os::raw::c_char,
        strlen: *mut size_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn process_readString(
        proc_: *mut Process,
        str_: *mut ::std::os::raw::c_char,
        src: PluginVirtualPtr,
        n: size_t,
    ) -> ssize_t;
}
extern "C" {
    pub fn process_writePtr(
        proc_: *mut Process,
        dst: PluginVirtualPtr,
        src: *const ::std::os::raw::c_void,
        n: size_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn process_getReadablePtr(
        proc_: *mut Process,
        plugin_src: PluginPtr,
        n: size_t,
    ) -> *const ::std::os::raw::c_void;
}
extern "C" {
    pub fn process_getWriteablePtr(
        proc_: *mut Process,
        plugin_src: PluginPtr,
        n: size_t,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn process_getMutablePtr(
        proc_: *mut Process,
        plugin_src: PluginPtr,
        n: size_t,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn process_flushPtrs(proc_: *mut Process);
}
extern "C" {
    pub fn process_freePtrsWithoutFlushing(proc_: *mut Process);
}
extern "C" {
    pub fn process_getMemoryManager(proc_: *mut Process) -> *mut MemoryManager;
}
extern "C" {
    pub fn process_setMemoryManager(proc_: *mut Process, memoryManager: *mut MemoryManager);
}
extern "C" {
    pub fn process_getHostId(proc_: *const Process) -> u32;
}
extern "C" {
    pub fn process_parseArgStr(
        commandLine: *const ::std::os::raw::c_char,
        argc: *mut ::std::os::raw::c_int,
        argv: *mut *mut *mut ::std::os::raw::c_char,
        error: *mut *mut ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn process_parseArgStrFree(
        argv: *mut *mut ::std::os::raw::c_char,
        error: *mut ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn process_getSharedMem(proc_: *mut Process) -> *mut ShimShmemProcess;
}
extern "C" {
    pub fn process_signal(
        process: *mut Process,
        currentRunningThread: *mut Thread,
        siginfo: *const siginfo_t,
    );
}
extern "C" {
    pub fn process_getRealtimeTimer(process: *mut Process) -> *mut Timer;
}
extern "C" {
    pub fn process_getDumpable(process: *mut Process) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn process_setDumpable(process: *mut Process, dumpable: ::std::os::raw::c_int);
}
extern "C" {
    pub fn legacyfile_ref(data: gpointer);
}
extern "C" {
    pub fn legacyfile_unref(data: gpointer);
}
extern "C" {
    pub fn legacyfile_close(descriptor: *mut LegacyFile, host: *mut Host);
}
extern "C" {
    pub fn legacyfile_shutdownHelper(legacyDesc: *mut LegacyFile);
}
pub type Transport = _Transport;
pub type TransportFunctionTable = _TransportFunctionTable;
pub type TransportSendFunc = ::std::option::Option<
    unsafe extern "C" fn(
        transport: *mut Transport,
        thread: *mut Thread,
        buffer: PluginVirtualPtr,
        nBytes: gsize,
        ip: in_addr_t,
        port: in_port_t,
    ) -> gssize,
>;
pub type TransportReceiveFunc = ::std::option::Option<
    unsafe extern "C" fn(
        transport: *mut Transport,
        thread: *mut Thread,
        buffer: PluginVirtualPtr,
        nBytes: gsize,
        ip: *mut in_addr_t,
        port: *mut in_port_t,
    ) -> gssize,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _TransportFunctionTable {
    pub close: LegacyFileCloseFunc,
    pub cleanup: LegacyFileCleanupFunc,
    pub free: LegacyFileFreeFunc,
    pub send: TransportSendFunc,
    pub receive: TransportReceiveFunc,
    pub magic: guint,
}
#[test]
fn bindgen_test_layout__TransportFunctionTable() {
    assert_eq!(
        ::std::mem::size_of::<_TransportFunctionTable>(),
        48usize,
        concat!("Size of: ", stringify!(_TransportFunctionTable))
    );
    assert_eq!(
        ::std::mem::align_of::<_TransportFunctionTable>(),
        8usize,
        concat!("Alignment of ", stringify!(_TransportFunctionTable))
    );
    fn test_field_close() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<_TransportFunctionTable>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).close) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(_TransportFunctionTable),
                "::",
                stringify!(close)
            )
        );
    }
    test_field_close();
    fn test_field_cleanup() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<_TransportFunctionTable>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).cleanup) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(_TransportFunctionTable),
                "::",
                stringify!(cleanup)
            )
        );
    }
    test_field_cleanup();
    fn test_field_free() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<_TransportFunctionTable>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).free) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(_TransportFunctionTable),
                "::",
                stringify!(free)
            )
        );
    }
    test_field_free();
    fn test_field_send() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<_TransportFunctionTable>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).send) as usize - ptr as usize
            },
            24usize,
            concat!(
                "Offset of field: ",
                stringify!(_TransportFunctionTable),
                "::",
                stringify!(send)
            )
        );
    }
    test_field_send();
    fn test_field_receive() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<_TransportFunctionTable>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).receive) as usize - ptr as usize
            },
            32usize,
            concat!(
                "Offset of field: ",
                stringify!(_TransportFunctionTable),
                "::",
                stringify!(receive)
            )
        );
    }
    test_field_receive();
    fn test_field_magic() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<_TransportFunctionTable>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).magic) as usize - ptr as usize
            },
            40usize,
            concat!(
                "Offset of field: ",
                stringify!(_TransportFunctionTable),
                "::",
                stringify!(magic)
            )
        );
    }
    test_field_magic();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _Transport {
    pub super_: LegacyFile,
    pub vtable: *mut TransportFunctionTable,
    pub magic: guint,
}
